Housing: add parameter tuning

--- a/Housing/Housing.ipynb
+++ b/Housing/Housing.ipynb
@@ -717,6 +717,522 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing[\"rooms_per_household\"] = housing[\"total_rooms\"]/housing[\"households\"]\n",
+    "housing[\"bedrooms_per_room\"] = housing[\"total_bedrooms\"]/housing[\"total_rooms\"]\n",
+    "housing[\"population_per_household\"]=housing[\"population\"]/housing[\"households\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1> Prepare the Data for Machine learning Algorithms <h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing = strat_train_set.drop(\"median_house_value\", axis=1)\n",
+    "housing_labels = strat_train_set[\"median_house_value\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>4629</td>\n",
+       "      <td>-118.30</td>\n",
+       "      <td>34.07</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>3759.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3296.0</td>\n",
+       "      <td>1462.0</td>\n",
+       "      <td>2.2708</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6068</td>\n",
+       "      <td>-117.86</td>\n",
+       "      <td>34.01</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>4632.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3038.0</td>\n",
+       "      <td>727.0</td>\n",
+       "      <td>5.1762</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17923</td>\n",
+       "      <td>-121.97</td>\n",
+       "      <td>37.35</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1955.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>386.0</td>\n",
+       "      <td>4.6328</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13656</td>\n",
+       "      <td>-117.30</td>\n",
+       "      <td>34.05</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2155.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1039.0</td>\n",
+       "      <td>391.0</td>\n",
+       "      <td>1.6675</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19252</td>\n",
+       "      <td>-122.79</td>\n",
+       "      <td>38.48</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6837.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3468.0</td>\n",
+       "      <td>1405.0</td>\n",
+       "      <td>3.1662</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "4629     -118.30     34.07                18.0       3759.0             NaN   \n",
+       "6068     -117.86     34.01                16.0       4632.0             NaN   \n",
+       "17923    -121.97     37.35                30.0       1955.0             NaN   \n",
+       "13656    -117.30     34.05                 6.0       2155.0             NaN   \n",
+       "19252    -122.79     38.48                 7.0       6837.0             NaN   \n",
+       "\n",
+       "       population  households  median_income ocean_proximity  \n",
+       "4629       3296.0      1462.0         2.2708       <1H OCEAN  \n",
+       "6068       3038.0       727.0         5.1762       <1H OCEAN  \n",
+       "17923       999.0       386.0         4.6328       <1H OCEAN  \n",
+       "13656      1039.0       391.0         1.6675          INLAND  \n",
+       "19252      3468.0      1405.0         3.1662       <1H OCEAN  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_incomplete_rows = housing[housing.isnull().any(axis=1)].head()\n",
+    "sample_incomplete_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    from sklearn.impute import SimpleImputer # Scikit-Learn 0.20+\n",
+    "except ImportError:\n",
+    "    from sklearn.preprocessing import Imputer as SimpleImputer\n",
+    "\n",
+    "imputer = SimpleImputer(strategy=\"median\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+       "              missing_values=nan, strategy='median', verbose=0)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputer.fit(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-118.51  ,   34.26  ,   29.    , 2119.5   ,  433.    , 1164.    ,\n",
+       "        408.    ,    3.5409])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputer.statistics_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = imputer.transform(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_tr = pd.DataFrame(X, columns=housing_num.columns, index=housing.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>4629</td>\n",
+       "      <td>-118.30</td>\n",
+       "      <td>34.07</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>3759.0</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>3296.0</td>\n",
+       "      <td>1462.0</td>\n",
+       "      <td>2.2708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6068</td>\n",
+       "      <td>-117.86</td>\n",
+       "      <td>34.01</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>4632.0</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>3038.0</td>\n",
+       "      <td>727.0</td>\n",
+       "      <td>5.1762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17923</td>\n",
+       "      <td>-121.97</td>\n",
+       "      <td>37.35</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1955.0</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>386.0</td>\n",
+       "      <td>4.6328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13656</td>\n",
+       "      <td>-117.30</td>\n",
+       "      <td>34.05</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2155.0</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>1039.0</td>\n",
+       "      <td>391.0</td>\n",
+       "      <td>1.6675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19252</td>\n",
+       "      <td>-122.79</td>\n",
+       "      <td>38.48</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6837.0</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>3468.0</td>\n",
+       "      <td>1405.0</td>\n",
+       "      <td>3.1662</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "4629     -118.30     34.07                18.0       3759.0           433.0   \n",
+       "6068     -117.86     34.01                16.0       4632.0           433.0   \n",
+       "17923    -121.97     37.35                30.0       1955.0           433.0   \n",
+       "13656    -117.30     34.05                 6.0       2155.0           433.0   \n",
+       "19252    -122.79     38.48                 7.0       6837.0           433.0   \n",
+       "\n",
+       "       population  households  median_income  \n",
+       "4629       3296.0      1462.0         2.2708  \n",
+       "6068       3038.0       727.0         5.1762  \n",
+       "17923       999.0       386.0         4.6328  \n",
+       "13656      1039.0       391.0         1.6675  \n",
+       "19252      3468.0      1405.0         3.1662  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_tr.loc[sample_incomplete_rows.index.values]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17606     <1H OCEAN\n",
+       "18632     <1H OCEAN\n",
+       "14650    NEAR OCEAN\n",
+       "3230         INLAND\n",
+       "3555      <1H OCEAN\n",
+       "19480        INLAND\n",
+       "8879      <1H OCEAN\n",
+       "13685        INLAND\n",
+       "4937      <1H OCEAN\n",
+       "4861      <1H OCEAN\n",
+       "Name: ocean_proximity, dtype: object"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat = housing[\"ocean_proximity\"]\n",
+    "housing_cat.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_cat_encoded, housing_categories = housing_cat.factorize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = OneHotEncoder(categories='auto')\n",
+    "housing_cat_1hot = encoder.fit_transform(housing_cat_encoded.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<16512x5 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 16512 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat_1hot # spare matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## My Own Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['longitude', 'latitude', 'housing_median_age', 'total_rooms',\n",
+       "       'total_bedrooms', 'population', 'households', 'median_income',\n",
+       "       'ocean_proximity'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "# get the right column indices: safer than hard-coding indices 3, 4, 5, 6\n",
+    "rooms_ix, bedrooms_ix, population_ix, household_ix = [\n",
+    "    list(housing.columns).index(col)\n",
+    "    for col in (\"total_rooms\", \"total_bedrooms\", \"population\", \"households\")]\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, add_bedrooms_per_room = True): # no *args or **kwargs\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self  # nothing else to do\n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household, population_per_household,\n",
+    "                         bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household, population_per_household]\n",
+    "\n",
+    "attr_adder = CombinedAttributesAdder(add_bedrooms_per_room=False)\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "\n",
+    "def add_extra_features(X, add_bedrooms_per_room=True):\n",
+    "    rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "    population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "    if add_bedrooms_per_room:\n",
+    "        bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "        return np.c_[X, rooms_per_household, population_per_household,\n",
+    "                     bedrooms_per_room]\n",
+    "    else:\n",
+    "        return np.c_[X, rooms_per_household, population_per_household]\n",
+    "\n",
+    "attr_adder = FunctionTransformer(add_extra_features, validate=False,\n",
+    "                                 kw_args={\"add_bedrooms_per_room\": False})\n",
+    "housing_extra_attribs = attr_adder.fit_transform(housing.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
