--- a/Housing/Housing.ipynb
+++ b/Housing/Housing.ipynb
@@ -1233,10 +1233,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "      <th>rooms_per_household</th>\n",
+       "      <th>population_per_household</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>17606</td>\n",
+       "      <td>-121.89</td>\n",
+       "      <td>37.29</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1568</td>\n",
+       "      <td>351</td>\n",
+       "      <td>710</td>\n",
+       "      <td>339</td>\n",
+       "      <td>2.7042</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.62537</td>\n",
+       "      <td>2.0944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18632</td>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>37.05</td>\n",
+       "      <td>14</td>\n",
+       "      <td>679</td>\n",
+       "      <td>108</td>\n",
+       "      <td>306</td>\n",
+       "      <td>113</td>\n",
+       "      <td>6.4214</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>6.00885</td>\n",
+       "      <td>2.70796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14650</td>\n",
+       "      <td>-117.2</td>\n",
+       "      <td>32.77</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1952</td>\n",
+       "      <td>471</td>\n",
+       "      <td>936</td>\n",
+       "      <td>462</td>\n",
+       "      <td>2.8621</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "      <td>4.22511</td>\n",
+       "      <td>2.02597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3230</td>\n",
+       "      <td>-119.61</td>\n",
+       "      <td>36.31</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1847</td>\n",
+       "      <td>371</td>\n",
+       "      <td>1460</td>\n",
+       "      <td>353</td>\n",
+       "      <td>1.8839</td>\n",
+       "      <td>INLAND</td>\n",
+       "      <td>5.23229</td>\n",
+       "      <td>4.13598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3555</td>\n",
+       "      <td>-118.59</td>\n",
+       "      <td>34.23</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6592</td>\n",
+       "      <td>1525</td>\n",
+       "      <td>4459</td>\n",
+       "      <td>1463</td>\n",
+       "      <td>3.0347</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "      <td>4.50581</td>\n",
+       "      <td>3.04785</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      longitude latitude housing_median_age total_rooms total_bedrooms  \\\n",
+       "17606   -121.89    37.29                 38        1568            351   \n",
+       "18632   -121.93    37.05                 14         679            108   \n",
+       "14650    -117.2    32.77                 31        1952            471   \n",
+       "3230    -119.61    36.31                 25        1847            371   \n",
+       "3555    -118.59    34.23                 17        6592           1525   \n",
+       "\n",
+       "      population households median_income ocean_proximity rooms_per_household  \\\n",
+       "17606        710        339        2.7042       <1H OCEAN             4.62537   \n",
+       "18632        306        113        6.4214       <1H OCEAN             6.00885   \n",
+       "14650        936        462        2.8621      NEAR OCEAN             4.22511   \n",
+       "3230        1460        353        1.8839          INLAND             5.23229   \n",
+       "3555        4459       1463        3.0347       <1H OCEAN             4.50581   \n",
+       "\n",
+       "      population_per_household  \n",
+       "17606                   2.0944  \n",
+       "18632                  2.70796  \n",
+       "14650                  2.02597  \n",
+       "3230                   4.13598  \n",
+       "3555                   3.04785  "
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_extra_attribs = pd.DataFrame(\n",
+    "    housing_extra_attribs,\n",
+    "    columns=list(housing.columns)+[\"rooms_per_household\", \"population_per_household\"],\n",
+    "    index=housing.index)\n",
+    "housing_extra_attribs.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy='median')),\n",
+    "    ('attribs_adder', CombinedAttributesAdder()),\n",
+    "    ('std_scaler', StandardScaler()),\n",
+    "])\n",
+    "\n",
+    "housing_num_tr = num_pipeline.fit_transform(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, attributes_names):\n",
+    "        self.attributes_names = attributes_names\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X):\n",
+    "        return X[self.attributes_names].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_attribs = list(housing_num)\n",
+    "cat_attribs = [\"ocean_proximity\"]\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "        ('selector', DataFrameSelector(num_attribs)),\n",
+    "        ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "        ('attribs_adder', FunctionTransformer(add_extra_features, validate=False)),\n",
+    "        ('std_scaler', StandardScaler()),\n",
+    "    ])\n",
+    "\n",
+    "cat_pipeline = Pipeline([\n",
+    "        ('selector', DataFrameSelector(cat_attribs)),\n",
+    "        ('cat_encoder', OneHotEncoder(sparse=False)),\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.pipeline import FeatureUnion\n",
+    "\n",
+    "full_pipeline = FeatureUnion(transformer_list=[\n",
+    "        (\"num_pipeline\", num_pipeline),\n",
+    "        (\"cat_pipeline\", old_cat_pipeline),\n",
+    "    ])"
+   ]
   }
  ],
  "metadata": {
