Housing: train & test models

--- a/Housing/Housing.ipynb
+++ b/Housing/Housing.ipynb
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,9 +1455,200 @@
     "\n",
     "full_pipeline = FeatureUnion(transformer_list=[\n",
     "        (\"num_pipeline\", num_pipeline),\n",
-    "        (\"cat_pipeline\", old_cat_pipeline),\n",
+    "        (\"cat_pipeline\", cat_pipeline),\n",
     "    ])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_prepared = full_pipeline.fit_transform(housing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16512, 16)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Linear regression model\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "                      max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "                      min_impurity_split=None, min_samples_leaf=1,\n",
+       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "                      presort=False, random_state=None, splitter='best')"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Decision Tree Model\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "                      max_features='auto', max_leaf_nodes=None,\n",
+       "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                      min_samples_leaf=1, min_samples_split=2,\n",
+       "                      min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+       "                      n_jobs=None, oob_score=False, random_state=None,\n",
+       "                      verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random forest model\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "forest_reg = RandomForestRegressor(n_estimators=10)\n",
+    "forest_reg.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tuning Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "             estimator=RandomForestRegressor(bootstrap=True, criterion='mse',\n",
+       "                                             max_depth=None,\n",
+       "                                             max_features='auto',\n",
+       "                                             max_leaf_nodes=None,\n",
+       "                                             min_impurity_decrease=0.0,\n",
+       "                                             min_impurity_split=None,\n",
+       "                                             min_samples_leaf=1,\n",
+       "                                             min_samples_split=2,\n",
+       "                                             min_weight_fraction_leaf=0.0,\n",
+       "                                             n_estimators='warn', n_jobs=None,\n",
+       "                                             oob_score=False, random_state=None,\n",
+       "                                             verbose=0, warm_start=False),\n",
+       "             iid='warn', n_jobs=None,\n",
+       "             param_grid=[{'max_features': [2, 4, 6, 8],\n",
+       "                          'n_estimators': [3, 10, 30]},\n",
+       "                         {'bootstrap': [False], 'max_features': [2, 3, 4],\n",
+       "                          'n_estimators': [3, 10]}],\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=True,\n",
+       "             scoring='neg_mean_squared_error', verbose=0)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grid Search\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5, scoring='neg_mean_squared_error', return_train_score=True)\n",
+    "grid_search.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
