--- a/Housing/Practice.ipynb
+++ b/Housing/Practice.ipynb
@@ -1135,11 +1135,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "def indices_of_top_k(arr, k):\n",
+    "    return np.sort(np.argpartition(np.array(arr), -k)[-k:])\n",
+    "\n",
+    "class TopFeatureSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, feature_importances, k):\n",
+    "        self.feature_importances = feature_importances\n",
+    "        self.k = k\n",
+    "    def fit(self, X, y=None):\n",
+    "        self.feature_indices_ = indices_of_top_k(self.feature_importances, self.k)\n",
+    "        return self\n",
+    "    def transform(self, X):\n",
+    "        return X[:, self.feature_indices_]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preparation_and_feature_selection_pipeline = Pipeline([\n",
+    "    ('preparation', full_pipeline),\n",
+    "    ('feature_selection', TopFeatureSelector(feature_importances, k))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prepare_select_and_predict_pipeline = Pipeline([\n",
+    "    ('preparation', full_pipeline),\n",
+    "    ('feature_selection', TopFeatureSelector(feature_importances, k)),\n",
+    "    ('svm_reg', SVR(**rnd_search.best_params_))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = [{\n",
+    "    'preparation__num__imputer__strategy': ['mean', 'median', 'most_frequent'],\n",
+    "    'feature_selection__k': list(range(1, len(feature_importances) + 1))\n",
+    "}]\n",
+    "\n",
+    "grid_search_prep = GridSearchCV(prepare_select_and_predict_pipeline, param_grid, cv=5,\n",
+    "                                scoring='neg_mean_squared_error', verbose=2, n_jobs=4)\n",
+    "grid_search_prep.fit(housing, housing_labels)"
+   ]
   }
  ],
  "metadata": {
