MNIST: multiclass classification

--- a/MNIST/MNIST.ipynb
+++ b/MNIST/MNIST.ipynb
@@ -578,6 +578,33 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Multilabel Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "y_train = y_train.astype(int)\n",
+    "y_train_large = (y_train >= 7)\n",
+    "y_train_odd = (y_train % 2 == 1)\n",
+    "y_multilabel = np.c_[y_train_large, y_train_odd]\n",
+    "\n",
+    "knn_clf = KNeighborsClassifier()\n",
+    "knn_clf.fit(X_train, y_multilabel)\n",
+    "knn_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
