MNIST: Problem 1 achieve 96% accuracy

--- a/MNIST/MNIST_Classifier.ipynb
+++ b/MNIST/MNIST_Classifier.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Naive Multinomial Classifier"
+    "## RandomForest Classifier Model"
    ]
   },
   {
@@ -117,103 +117,29 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train process finish\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/anaconda3/envs/cs231n-2/lib/python3.7/site-packages/sklearn/linear_model/_stochastic_gradient.py:557: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
-      "  ConvergenceWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# KNN is too slow for training so using stochastic method instead\n",
-    "from sklearn.linear_model import SGDClassifier\n",
-    "\n",
-    "sgd_clf = SGDClassifier(max_iter=5, random_state=42)\n",
-    "sgd_clf.fit(X_train, y_train)\n",
-    "print(\"Train process finish\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/anaconda3/envs/cs231n-2/lib/python3.7/site-packages/sklearn/linear_model/_stochastic_gradient.py:557: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
-      "  ConvergenceWarning)\n",
-      "/usr/local/anaconda3/envs/cs231n-2/lib/python3.7/site-packages/sklearn/linear_model/_stochastic_gradient.py:557: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
-      "  ConvergenceWarning)\n",
-      "/usr/local/anaconda3/envs/cs231n-2/lib/python3.7/site-packages/sklearn/linear_model/_stochastic_gradient.py:557: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
-      "  ConvergenceWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([0.84275, 0.85485, 0.8733 ])"
+       "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+       "                       criterion='gini', max_depth=None, max_features='auto',\n",
+       "                       max_leaf_nodes=None, max_samples=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+       "                       n_jobs=None, oob_score=False, random_state=None,\n",
+       "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Normal SGD Model test accuracy with cross validation\n",
-    "# Gets 85% Accuracy\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import cross_val_predict\n",
+    "# using randomforest classifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "cross_val_score(sgd_clf, X_train, y_train, cv=3, scoring=\"accuracy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/anaconda3/envs/cs231n-2/lib/python3.7/site-packages/sklearn/linear_model/_stochastic_gradient.py:557: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
-      "  ConvergenceWarning)\n",
-      "/usr/local/anaconda3/envs/cs231n-2/lib/python3.7/site-packages/sklearn/linear_model/_stochastic_gradient.py:557: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
-      "  ConvergenceWarning)\n",
-      "/usr/local/anaconda3/envs/cs231n-2/lib/python3.7/site-packages/sklearn/linear_model/_stochastic_gradient.py:557: ConvergenceWarning: Maximum number of iteration reached before convergence. Consider increasing max_iter to improve the fit.\n",
-      "  ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.9081 , 0.907  , 0.91415])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Doing some Feature Scaling for the Accuracy\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train.astype(np.float64))\n",
-    "\n",
-    "cross_val_score(sgd_clf, X_train_scaled, y_train, cv=3, scoring=\"accuracy\")"
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
@@ -222,8 +148,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To Improve Teest Accuracy, need to tune hyperparameters\n"
+    "# make prediction using cross_validation score\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "cross_val_score(clf, X_train, y_train, cv=3, scoring=\"accuracy\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to improve accuracy we have to tune training-test set\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scale = scaler.fit_transform(X_train)\n",
+    "\n",
+    "clf.fit(X_train_scale, y_train)\n",
+    "cross_val_score(clf, X_train, y_train, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test score (KNN takes too long to train)\n",
+    "\n",
+    "X_test_scale = scaler.fit_transform(X_test)\n",
+    "prediction = clf.predict(X_test_scale)\n",
+    "result = (prediction == y_test).mean()\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
